--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,13 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
